Updated control scheme, just does uppercuts for now

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <script src="test.js"></script>
   <script src="fighter.js"></script>
 </head>
-<body></body>
+<body>
+<p>Arrow keys to sway - Hold <strong>A</strong> to charge, release to punch.</p>
+</body>
 </html>
