Z & X controls for uppercut and straight

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <script src="helpers.js"></script>
   <script src="matter.min.js"></script>
   <script src="pid.js"></script>
-
   <script src="test.js"></script>
   <script src="fighter.js"></script>
 </head>
 <body>
-<p>Arrow keys to sway - Hold <strong>A</strong> to charge, release to punch.</p>
+<p>
+  Arrows to sway - <strong>Z</strong> uppercut, <strong>X</strong> straight. Hold to Charge.
+</p>
 </body>
 </html>
